methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:11: error: Unit does not take parameters
  jumpU();
       ^PictureMono2:20: error: Unit does not take parameters
  jumpU();
       ^