methods.picture.PictureMono2.scala.code
override def run() {
  
  faireV();
  
  jumpR();
  faireMotif();
  
  jumpR();
  faireMotif();
  
  jumpU();
  faireMotif();
  
  jumpL();
  faireMotif();
  
  jumpL();
  faireMotif();
  
  jumpU();
  faireMotif();
  
  jumpR();
  faireMotif();
  
  jumpR();
  faireMotif();
  
}


def faireV() {
  
  avance();
  avance();
  gauche();
  baisseBrosse();
  leveBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  avance();
  gauche();
  
}


def faireMotif() {
  
  for (i <- 1 to 4) {
    
  faireV();
    
  }
  
}


def jumpR() {
  
  for (i <- 1 to 7) {
    
    avance();
    
  }
  
}


def jumpL() {
  
  for (i <- 1 to 7) {
    
    recule();
    
  }
  
}


def jumpU {
  
  gauche();
  
  for (i <- 1 to 7) {
    
    avance();
    
  }
  
}